--- a/src/EtherSharp/ABI/Decode/AbiDecoder.SizedBytes.tt
+++ b/src/EtherSharp/ABI/Decode/AbiDecoder.SizedBytes.tt
@@ -1,7 +1,5 @@
-<#@ template language="C#" #>
-<#@ output extension=".cs" #>
-<#@ import namespace="System" #>
 using EtherSharp.ABI.Fixed;
+using EtherSharp.ABI.Decode.Interfaces;
 
 namespace EtherSharp.ABI;
 public partial class AbiDecoder
@@ -11,6 +9,16 @@ public partial class AbiDecoder
         value = FixedType<object>.Byte.Decode(CurrentSlot);
         return this;
     }
+    byte IFixedTupleDecoder.Bytes1()
+    {
+        _ = Bytes1(out byte value);
+        return value;
+    }
+    byte IDynamicTupleDecoder.Bytes1()
+    {
+        _ = Bytes1(out byte value);
+        return value;
+    }
 <#
     for(var i = 2; i <= 32;i=i+1)
     {
@@ -19,6 +27,16 @@ public partial class AbiDecoder
     {
         value = FixedType<object>.Bytes.Decode(CurrentSlot, <#=i#>);
         return this;
+    }
+    ReadOnlySpan<byte> IFixedTupleDecoder.Bytes<#=i#>()
+    {
+        _ = Bytes<#=i#>(out var value);
+        return value;
+    }
+    ReadOnlySpan<byte> IDynamicTupleDecoder.Bytes<#=i#>()
+    {
+        _ = Bytes<#=i#>(out var value);
+        return value;
     }
 <#
     }
