--- a/src/EtherSharp/ABI/Decode/Interfaces/IFixedTupleDecoder.SizedNumbers.tt
+++ b/src/EtherSharp/ABI/Decode/Interfaces/IFixedTupleDecoder.SizedNumbers.tt
@@ -1,7 +1,7 @@
 ﻿using System.Numerics;
 
 namespace EtherSharp.ABI.Decode.Interfaces;
-public partial interface IStructAbiDecoder
+public partial interface IFixedTupleDecoder
 {
     public sbyte Int8();
     public byte UInt8();
