--- a/src/EtherSharp/ABI/Decode/AbiDecoder.SizedBytes.tt
+++ b/src/EtherSharp/ABI/Decode/AbiDecoder.SizedBytes.tt
@@ -6,7 +6,7 @@ public partial class AbiDecoder
 {
     public AbiDecoder Bytes1(out byte value)
     {
-        value = FixedType<object>.Byte.Decode(CurrentSlot);
+        value = FixedType.Byte.Decode(CurrentSlot);
         return this;
     }
     byte IFixedTupleDecoder.Bytes1()
@@ -25,7 +25,7 @@ public partial class AbiDecoder
 #>
     public AbiDecoder Bytes<#=i#>(out ReadOnlySpan<byte> value)
     {
-        value = FixedType<object>.Bytes.Decode(CurrentSlot, <#=i#>);
+        value = FixedType.Bytes.Decode(CurrentSlot, <#=i#>);
         return this;
     }
     ReadOnlySpan<byte> IFixedTupleDecoder.Bytes<#=i#>()
