--- a/src/EtherSharp/ABI/Encode/AbiEncoder.SizedBytes.tt
+++ b/src/EtherSharp/ABI/Encode/AbiEncoder.SizedBytes.tt
@@ -8,7 +8,7 @@ namespace EtherSharp.ABI;
 public partial class AbiEncoder
 {
     public AbiEncoder Bytes1(byte value)
-        => AddElement(new FixedType<object>.Byte(value));    
+        => AddElement(new FixedType.Byte(value));    
     IFixedTupleEncoder IFixedTupleEncoder.Bytes1(byte value)
         => Bytes1(value);    
     IDynamicTupleEncoder IDynamicTupleEncoder.Bytes1(byte value)
@@ -18,7 +18,7 @@ public partial class AbiEncoder
     {
 #>
     public AbiEncoder Bytes<#=i#>(params byte[] value)
-        => AddElement(new FixedType<object>.Bytes(value, <#=i#>));
+        => AddElement(new FixedType.Bytes(value, <#=i#>));
     IFixedTupleEncoder IFixedTupleEncoder.Bytes<#=i#>(params byte[] value)
         => Bytes<#=i#>(value);
     IDynamicTupleEncoder IDynamicTupleEncoder.Bytes<#=i#>(params byte[] value)
