--- a/src/EtherSharp/ABI/Encode/AbiEncoder.NumberArrays.tt
+++ b/src/EtherSharp/ABI/Encode/AbiEncoder.NumberArrays.tt
@@ -1,7 +1,7 @@
 <#@ template language="C#" #>
 <#@ output extension=".cs" #>
 <#@ import namespace="System" #>
-using EtherSharp.ABI.Dynamic;
+using EtherSharp.ABI.Types;
 using EtherSharp.ABI.Encode.Interfaces;
 using System.Numerics;
 
@@ -9,28 +9,28 @@ namespace EtherSharp.ABI;
 public partial class AbiEncoder
 {
     public AbiEncoder Int8Array(params sbyte[] value)
-        => AddElement(new DynamicType.PrimitiveNumberArray<sbyte>(value, 8));
+        => AddElement(new AbiTypes.PrimitiveNumberArray<sbyte>(value, 8));
     IArrayAbiEncoder IArrayAbiEncoder.Int8Array(params sbyte[] value)
         => Int8Array(value); 
     IDynamicTupleEncoder IDynamicTupleEncoder.Int8Array(params sbyte[] value)
         => Int8Array(value);
 
     public AbiEncoder UInt8Array(params byte[] value)
-        => AddElement(new DynamicType.PrimitiveNumberArray<byte>(value, 8));
+        => AddElement(new AbiTypes.PrimitiveNumberArray<byte>(value, 8));
     IArrayAbiEncoder IArrayAbiEncoder.UInt8Array(params byte[] value)
         => UInt8Array(value);
     IDynamicTupleEncoder IDynamicTupleEncoder.UInt8Array(params byte[] value)
         => UInt8Array(value);
 
     public AbiEncoder Int16Array(params short[] value)
-        => AddElement(new DynamicType.PrimitiveNumberArray<short>(value, 16));
+        => AddElement(new AbiTypes.PrimitiveNumberArray<short>(value, 16));
     IArrayAbiEncoder IArrayAbiEncoder.Int16Array(params short[] value)
         => Int16Array(value);
     IDynamicTupleEncoder IDynamicTupleEncoder.Int16Array(params short[] value)
         => Int16Array(value);
 
     public AbiEncoder UInt16Array(params ushort[] value)
-        => AddElement(new DynamicType.PrimitiveNumberArray<ushort>(value, 16));
+        => AddElement(new AbiTypes.PrimitiveNumberArray<ushort>(value, 16));
     IArrayAbiEncoder IArrayAbiEncoder.UInt16Array(params ushort[] value)
         => UInt16Array(value);
     IDynamicTupleEncoder IDynamicTupleEncoder.UInt16Array(params ushort[] value)
@@ -41,14 +41,14 @@ public partial class AbiEncoder
     {
 #>
     public AbiEncoder Int<#=i#>Array(params int[] value)
-        => AddElement(new DynamicType.PrimitiveNumberArray<int>(value, <#=i#>));
+        => AddElement(new AbiTypes.PrimitiveNumberArray<int>(value, <#=i#>));
     IArrayAbiEncoder IArrayAbiEncoder.Int<#=i#>Array(params int[] value)
         => Int<#=i#>Array(value);
     IDynamicTupleEncoder IDynamicTupleEncoder.Int<#=i#>Array(params int[] value)
         => Int<#=i#>Array(value);
 
     public AbiEncoder UInt<#=i#>Array(params uint[] value)
-        => AddElement(new DynamicType.PrimitiveNumberArray<uint>(value, <#=i#>));
+        => AddElement(new AbiTypes.PrimitiveNumberArray<uint>(value, <#=i#>));
     IArrayAbiEncoder IArrayAbiEncoder.UInt<#=i#>Array(params uint[] value)
         => UInt<#=i#>Array(value);
     IDynamicTupleEncoder IDynamicTupleEncoder.UInt<#=i#>Array(params uint[] value)
@@ -61,14 +61,14 @@ public partial class AbiEncoder
     {
 #>
     public AbiEncoder Int<#=i#>Array(params long[] value)
-        => AddElement(new DynamicType.PrimitiveNumberArray<long>(value, <#=i#>));
+        => AddElement(new AbiTypes.PrimitiveNumberArray<long>(value, <#=i#>));
     IArrayAbiEncoder IArrayAbiEncoder.Int<#=i#>Array(params long[] value)
         => Int<#=i#>Array(value);
     IDynamicTupleEncoder IDynamicTupleEncoder.Int<#=i#>Array(params long[] value)
         => Int<#=i#>Array(value);
 
     public AbiEncoder UInt<#=i#>Array(params ulong[] value)
-        => AddElement(new DynamicType.PrimitiveNumberArray<ulong>(value, <#=i#>));
+        => AddElement(new AbiTypes.PrimitiveNumberArray<ulong>(value, <#=i#>));
     IArrayAbiEncoder IArrayAbiEncoder.UInt<#=i#>Array(params ulong[] value)
         => UInt<#=i#>Array(value);
     IDynamicTupleEncoder IDynamicTupleEncoder.UInt<#=i#>Array(params ulong[] value)
@@ -81,14 +81,14 @@ public partial class AbiEncoder
     {
 #>
     public AbiEncoder Int<#=i#>Array(params BigInteger[] value)
-        => AddElement(new DynamicType.BigIntegerArray(value, false, <#=i#>));
+        => AddElement(new AbiTypes.BigIntegerArray(value, false, <#=i#>));
     IArrayAbiEncoder IArrayAbiEncoder.Int<#=i#>Array(params BigInteger[] value)
         => Int<#=i#>Array(value);
     IDynamicTupleEncoder IDynamicTupleEncoder.Int<#=i#>Array(params BigInteger[] value)
         => Int<#=i#>Array(value);
 
     public AbiEncoder UInt<#=i#>Array(params BigInteger[] value)
-        => AddElement(new DynamicType.BigIntegerArray(value, true, <#=i#>));
+        => AddElement(new AbiTypes.BigIntegerArray(value, true, <#=i#>));
     IArrayAbiEncoder IArrayAbiEncoder.UInt<#=i#>Array(params BigInteger[] value)
         => UInt<#=i#>Array(value);
     IDynamicTupleEncoder IDynamicTupleEncoder.UInt<#=i#>Array(params BigInteger[] value)
